refactor: enhance getAllUsers endpoint to return additional details