@@ -1,7 +1,8 @@
 package com.activecourses.upwork.service.user;
 
+import com.activecourses.upwork.dto.user.UserDto;
 import com.activecourses.upwork.dto.user.UserResponseDto;
-import com.activecourses.upwork.mapper.user.UserResponseMapper;
+import com.activecourses.upwork.mapper.user.UserDtoMapper;
 import com.activecourses.upwork.model.User;
 import com.activecourses.upwork.repository.user.UserRepository;
 import org.springframework.data.domain.Page;
@@ -10,21 +11,20 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class userServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final UserResponseMapper userResponseMapper;
+    private final UserDtoMapper userDtoMapper;
 
-    public userServiceImpl(UserRepository userRepository, UserResponseMapper userResponseMapper) {
+    public userServiceImpl(UserRepository userRepository, UserDtoMapper userDtoMapper) {
         this.userRepository = userRepository;
-        this.userResponseMapper = userResponseMapper;
+        this.userDtoMapper = userDtoMapper;
     }
 
     @Override
-    public List<UserResponseDto> getAllUsers(int pageNo, int pageSize) {
+    public UserResponseDto getAllUsers(int pageNo, int pageSize) {
         Pageable pageable = PageRequest.of(pageNo, pageSize);
 
         // Retrieve a page of users
@@ -33,8 +33,17 @@ public class userServiceImpl implements UserService {
         // Get the content
         List<User> users = pagedResult.getContent();
 
-        return users.stream()
-                .map(userResponseMapper::mapTo)
-                .collect(Collectors.toList());
+        List<UserDto> content = users.stream()
+                .map(userDtoMapper::mapTo)
+                .toList();
+
+        UserResponseDto userResponseDto = new UserResponseDto();
+        userResponseDto.setContent(content);
+        userResponseDto.setPageNo(pagedResult.getNumber());
+        userResponseDto.setPageSize(pagedResult.getSize());
+        userResponseDto.setTotalElements((int) pagedResult.getTotalElements());
+        userResponseDto.setTotalPages(pagedResult.getTotalPages());
+        userResponseDto.setLast(pagedResult.isLast());
+        return userResponseDto;
     }
 }
